@@ -1,4 +1,4 @@
 include $(top_srcdir)/aminclude.am
 
-SUBDIRS = src include test doc
+SUBDIRS = replace src include test doc
 EXTRA_DIST = doxygen.cfg
