@@ -1,0 +1,3 @@
+noinst_LTLIBRARIES    = libreplace.la
+libreplace_la_SOURCES =
+libreplace_la_LIBADD  = @LTLIBOBJS@
